[package]
name = "M0nkrus-Adobe-Tracker"
version = "0.3.0"
edition = "2024"
authors = ["oSumAtrIX", "Djkáťo"]
license = "GPL-3.0-or-later"

[dependencies]
eframe = "0.34.3"
egui = "0.34.3"
image = { version = "0.25.10", default-features = false, features = ["ico"] }
reqwest = { version = "0.13.4", default-features = false, features = [
    "blocking",
    "rustls",
] }
rfd = "0.17.2"
scraper = "0.27.0"
tray-icon = "0.24.0"
version-compare = "0.2.1"
winreg = "0.56.0"
winrt-notification = "0.5.1"

[build-dependencies]
winresource = "0.1.31"
